--- a/game.html
+++ b/game.html
@@ -1,3 +1,7 @@
+<!--Frank Cervnates 
+    brainwave Trivia
+    06/24/23 -->
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -12,7 +16,9 @@
 <body>
     <header class="header">
         <h1><a href="steps.html">BrainWave Trivia: U.S. States</a></h1>
+        <p>Background muisc from: <a href="https://pixabay.com/music/happy-childrens-tunes-spring-upbeat-133219/">here</a></p>
     </header>
+<audio id="background-music" src="assets/spring-upbeat-133219.mp3" loop></audio>
 
     <section class="quiz-section">
         <div class="container">
@@ -24,7 +30,7 @@
 
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2023 BrainWave Trivia. All rights reserved.</p>
+            <p>&copy; 2023 brainwave Trivia. All rights reserved.</p>
         </div>
     </footer>
 
