--- a/steps.html
+++ b/steps.html
@@ -1,3 +1,7 @@
+<!--Frank Cervnates 
+    brainwave Trivia
+    06/24/23 -->
+
 <!DOCTYPE html>
 <html lang="en">
 <link rel=" stylesheet" href="steps.css">
@@ -13,6 +17,8 @@
 <body>
     <header class="header">
         <h1>Welcome to BrainWave Trivia!</h1>
+        <img src="assets/Trivia-Night-image.png" height="100px">
+        <p> Image from: <a href ="https://acskids.org/trivia2022/">here</a></p>
     </header>
     <h2>Instructions</h2>
     <h4>Capitals of States</h4>
@@ -30,7 +36,7 @@
                 <li>Have fun and good luck!</li>
             </ol>
             <div class="start-button-container">
-                <button onclick="startGame()" class="start-button"><a href=game.html> Start Game</a></button>
+                <button class="start-button"><a href="game.html">Start Game</a></button>
             </div>
         </div>
     </section>
